feat: update code flex message